test/apps/errors/src/routes/async-throw.json.js
export async function get(req, res) {
  throw new Error('oops');
}